--- a/kardioml/models/deepecg/notebooks/5_hyper_parameter_tuning_test.ipynb
+++ b/kardioml/models/deepecg/notebooks/5_hyper_parameter_tuning_test.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,80 +56,130 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hyper-Parameter: num_res_layers-6_num_filts-32_drop_rate-0.2_kernel_size-3_fs-250\n",
+      "Workstation has 1 CPUs.\n",
+      "Workstation has 2 GPUs.\n",
+      "Initializing Model\n",
+      "input | shape = (?, 15000, 13)\n",
+      "stem_layer_1 | shape = (?, 7500, 16)\n",
+      "stem_layer_2 | shape = (?, 3750, 32)\n",
+      "res_layer_1_skip | shape = (?, 3750, 32)\n",
+      "res_layer_2_skip | shape = (?, 3750, 32)\n",
+      "res_layer_3_skip | shape = (?, 3750, 32)\n",
+      "res_layer_4_skip | shape = (?, 3750, 32)\n",
+      "res_layer_5_skip | shape = (?, 3750, 32)\n",
+      "res_layer_6_skip | shape = (?, 3750, 32)\n",
+      "output_skip_addition | shape = (?, 3750, 32)\n",
+      "output_conv1 | shape = (?, 3750, 64)\n",
+      "output_conv2 | shape = (?, 3750, 128)\n",
+      "gap | shape = (?, 128)\n",
+      "logits | shape = (?, 9)\n",
+      "input | shape = (?, 15000, 13)\n",
+      "stem_layer_1 | shape = (?, 7500, 16)\n",
+      "stem_layer_2 | shape = (?, 3750, 32)\n",
+      "res_layer_1_skip | shape = (?, 3750, 32)\n",
+      "res_layer_2_skip | shape = (?, 3750, 32)\n",
+      "res_layer_3_skip | shape = (?, 3750, 32)\n",
+      "res_layer_4_skip | shape = (?, 3750, 32)\n",
+      "res_layer_5_skip | shape = (?, 3750, 32)\n",
+      "res_layer_6_skip | shape = (?, 3750, 32)\n",
+      "output_skip_addition | shape = (?, 3750, 32)\n",
+      "output_conv1 | shape = (?, 3750, 64)\n",
+      "output_conv2 | shape = (?, 3750, 128)\n",
+      "gap | shape = (?, 128)\n",
+      "logits | shape = (?, 9)\n",
+      "Training Start\n"
+     ]
+    }
+   ],
    "source": [
     "# Set data path\n",
     "data_path = os.path.join(DATA_PATH, 'formatted')\n",
     "\n",
     "# Set model name\n",
-    "training_run = 'hpt_12'\n",
+    "training_run = 'hpt_14'\n",
     "\n",
     "# Set sample length (seconds)\n",
     "duration = 60\n",
     "\n",
     "# Loop through CV folds\n",
-    "for param in [250, 300, 350, 400, 450, 500]:\n",
+    "for num_res_layers in [6, 7, 8, 9, 10]:\n",
+    "    for num_filts in [32, 64, 128, 256, 512]:\n",
+    "        for drop_rate in [0.2, 0.3, 0.4]:\n",
+    "            for kernel_size in [3, 5, 7]:\n",
+    "                for fs in [250, 300, 350, 400, 450, 500]:\n",
     "\n",
-    "    print('Hyper-Parameter: {}'.format(param))\n",
-    "    \n",
-    "    # Set data path\n",
-    "    lookup_path = os.path.join(DATA_PATH, 'deepecg')\n",
+    "                    experiment_name = 'num_res_layers-{}_num_filts-{}_drop_rate-{}_kernel_size-{}_fs-{}'.format(num_res_layers, \n",
+    "                                                                                                                num_filts,\n",
+    "                                                                                                                drop_rate, \n",
+    "                                                                                                                kernel_size,\n",
+    "                                                                                                                fs)\n",
+    "                    print('Hyper-Parameter: {}'.format(experiment_name))\n",
     "\n",
-    "    # Print devices\n",
-    "    print_device_counts()\n",
+    "                    # Set data path\n",
+    "                    lookup_path = os.path.join(DATA_PATH, 'deepecg')\n",
     "\n",
-    "    # Set save path for graphs, summaries, and checkpoints\n",
-    "    output_path = os.path.join(OUTPUT_PATH, training_run)\n",
-    "    os.makedirs(output_path, exist_ok=True)\n",
+    "                    # Print devices\n",
+    "                    print_device_counts()\n",
     "\n",
-    "    # Set model name\n",
-    "    model_name = 'sess_{}'.format(param)\n",
+    "                    # Set save path for graphs, summaries, and checkpoints\n",
+    "                    output_path = os.path.join(OUTPUT_PATH, training_run)\n",
+    "                    os.makedirs(output_path, exist_ok=True)\n",
     "\n",
-    "    # Maximum number of checkpoints to keep\n",
-    "    max_to_keep = 1\n",
+    "                    # Set model name\n",
+    "                    model_name = 'sess_{}'.format(experiment_name)\n",
     "\n",
-    "    # Set randome states\n",
-    "    seed = 0 \n",
-    "    \n",
-    "    # Set sample frequency\n",
-    "    fs = param\n",
+    "                    # Maximum number of checkpoints to keep\n",
+    "                    max_to_keep = 1\n",
     "\n",
-    "    # Get training dataset dimensions\n",
-    "    length, channels = (int(duration * fs), 13)     \n",
+    "                    # Set randome states\n",
+    "                    seed = 0 \n",
     "\n",
-    "    # Number of classes\n",
-    "    classes = LABELS_COUNT\n",
+    "                    # Get training dataset dimensions\n",
+    "                    length, channels = (int(duration * fs), 13)     \n",
     "\n",
-    "    # Choose network\n",
-    "    network_name = 'DeepECGV1'\n",
+    "                    # Number of classes\n",
+    "                    classes = LABELS_COUNT\n",
     "\n",
-    "    # Set hyper-parameter\n",
-    "    hyper_params = {'num_res_layers': 9, 'drop_rate': 0.3, 'kernel_size': 3, \n",
-    "                    'conv_filts': 128, 'res_filts': 128, 'skip_filts': 128, \n",
-    "                    'dilation': True, 'fs': fs}\n",
+    "                    # Choose network\n",
+    "                    network_name = 'DeepECGV1'\n",
     "\n",
-    "    # Set network inputs\n",
-    "    network_parameters = {'length': length, 'channels': channels, 'classes': classes, 'seed': seed,\n",
-    "                          'hyper_params': hyper_params}\n",
+    "                    # Set hyper-parameter\n",
+    "                    hyper_params = {'num_res_layers': num_res_layers, 'drop_rate': drop_rate, 'kernel_size': kernel_size, \n",
+    "                                    'conv_filts': num_filts, 'res_filts': num_filts, 'skip_filts': num_filts, \n",
+    "                                    'dilation': True, 'fs': fs}\n",
     "\n",
-    "    # Create model\n",
-    "    print('Initializing Model')\n",
-    "    model = Model(model_name=model_name, \n",
-    "                  network_name=network_name, \n",
-    "                  network_parameters=network_parameters, \n",
-    "                  save_path=output_path,\n",
-    "                  data_path=data_path,\n",
-    "                  lookup_path=lookup_path,\n",
-    "                  max_to_keep=max_to_keep)\n",
+    "                    # Set network inputs\n",
+    "                    network_parameters = {'length': length, 'channels': channels, 'classes': classes, 'seed': seed,\n",
+    "                                          'hyper_params': hyper_params}\n",
     "\n",
-    "    # Set hyper-parameters\n",
-    "    epochs = 60\n",
-    "    batch_size = 16            \n",
+    "                    try:\n",
+    "                        # Create model\n",
+    "                        print('Initializing Model')\n",
+    "                        model = Model(model_name=model_name, \n",
+    "                                      network_name=network_name, \n",
+    "                                      network_parameters=network_parameters, \n",
+    "                                      save_path=output_path,\n",
+    "                                      data_path=data_path,\n",
+    "                                      lookup_path=lookup_path,\n",
+    "                                      max_to_keep=max_to_keep)\n",
     "\n",
-    "    # Train model\n",
-    "    print('Training Start')\n",
-    "    train(model=model, epochs=epochs, batch_size=batch_size)\n",
-    "    print('Training End\\n')"
+    "                        # Set hyper-parameters\n",
+    "                        epochs = 50\n",
+    "                        batch_size = 16            \n",
+    "\n",
+    "                        # Train model\n",
+    "                        print('Training Start')\n",
+    "                        train(model=model, epochs=epochs, batch_size=batch_size)\n",
+    "                        print('Training End\\n')\n",
+    "                        \n",
+    "                    except:\n",
+    "                        print('Training Failure: {}'.format(experiment_name))"
    ]
   }
  ],
