--- a/kardioml/models/deepecg/notebooks/5_hyper_parameter_tuning_test.ipynb
+++ b/kardioml/models/deepecg/notebooks/5_hyper_parameter_tuning_test.ipynb
@@ -61,37 +61,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hyper-Parameter: num_res_layers-6_num_filts-32_drop_rate-0.2_kernel_size-3_fs-250\n",
+      "Hyper-Parameter: num_res_layers-6_num_filts-128_drop_rate-0.3_kernel_size-3_fs-300\n",
       "Workstation has 1 CPUs.\n",
       "Workstation has 2 GPUs.\n",
       "Initializing Model\n",
-      "input | shape = (?, 15000, 13)\n",
-      "stem_layer_1 | shape = (?, 7500, 16)\n",
-      "stem_layer_2 | shape = (?, 3750, 32)\n",
-      "res_layer_1_skip | shape = (?, 3750, 32)\n",
-      "res_layer_2_skip | shape = (?, 3750, 32)\n",
-      "res_layer_3_skip | shape = (?, 3750, 32)\n",
-      "res_layer_4_skip | shape = (?, 3750, 32)\n",
-      "res_layer_5_skip | shape = (?, 3750, 32)\n",
-      "res_layer_6_skip | shape = (?, 3750, 32)\n",
-      "output_skip_addition | shape = (?, 3750, 32)\n",
-      "output_conv1 | shape = (?, 3750, 64)\n",
-      "output_conv2 | shape = (?, 3750, 128)\n",
-      "gap | shape = (?, 128)\n",
+      "input | shape = (?, 18000, 13)\n",
+      "stem_layer_1 | shape = (?, 9000, 64)\n",
+      "stem_layer_2 | shape = (?, 4500, 128)\n",
+      "res_layer_1_skip | shape = (?, 4500, 128)\n",
+      "res_layer_2_skip | shape = (?, 4500, 128)\n",
+      "res_layer_3_skip | shape = (?, 4500, 128)\n",
+      "res_layer_4_skip | shape = (?, 4500, 128)\n",
+      "res_layer_5_skip | shape = (?, 4500, 128)\n",
+      "res_layer_6_skip | shape = (?, 4500, 128)\n",
+      "output_skip_addition | shape = (?, 4500, 128)\n",
+      "output_conv1 | shape = (?, 4500, 256)\n",
+      "output_conv2 | shape = (?, 4500, 512)\n",
+      "gap | shape = (?, 512)\n",
       "logits | shape = (?, 9)\n",
-      "input | shape = (?, 15000, 13)\n",
-      "stem_layer_1 | shape = (?, 7500, 16)\n",
-      "stem_layer_2 | shape = (?, 3750, 32)\n",
-      "res_layer_1_skip | shape = (?, 3750, 32)\n",
-      "res_layer_2_skip | shape = (?, 3750, 32)\n",
-      "res_layer_3_skip | shape = (?, 3750, 32)\n",
-      "res_layer_4_skip | shape = (?, 3750, 32)\n",
-      "res_layer_5_skip | shape = (?, 3750, 32)\n",
-      "res_layer_6_skip | shape = (?, 3750, 32)\n",
-      "output_skip_addition | shape = (?, 3750, 32)\n",
-      "output_conv1 | shape = (?, 3750, 64)\n",
-      "output_conv2 | shape = (?, 3750, 128)\n",
-      "gap | shape = (?, 128)\n",
+      "input | shape = (?, 18000, 13)\n",
+      "stem_layer_1 | shape = (?, 9000, 64)\n",
+      "stem_layer_2 | shape = (?, 4500, 128)\n",
+      "res_layer_1_skip | shape = (?, 4500, 128)\n",
+      "res_layer_2_skip | shape = (?, 4500, 128)\n",
+      "res_layer_3_skip | shape = (?, 4500, 128)\n",
+      "res_layer_4_skip | shape = (?, 4500, 128)\n",
+      "res_layer_5_skip | shape = (?, 4500, 128)\n",
+      "res_layer_6_skip | shape = (?, 4500, 128)\n",
+      "output_skip_addition | shape = (?, 4500, 128)\n",
+      "output_conv1 | shape = (?, 4500, 256)\n",
+      "output_conv2 | shape = (?, 4500, 512)\n",
+      "gap | shape = (?, 512)\n",
       "logits | shape = (?, 9)\n",
       "Training Start\n"
      ]
@@ -109,10 +109,10 @@
     "\n",
     "# Loop through CV folds\n",
     "for num_res_layers in [6, 7, 8, 9, 10]:\n",
-    "    for num_filts in [32, 64, 128, 256, 512]:\n",
-    "        for drop_rate in [0.2, 0.3, 0.4]:\n",
-    "            for kernel_size in [3, 5, 7]:\n",
-    "                for fs in [250, 300, 350, 400, 450, 500]:\n",
+    "    for num_filts in [128, 256, 512]:\n",
+    "        for drop_rate in [0.3, 0.4, 0.5]:\n",
+    "            for kernel_size in [3, 5]:\n",
+    "                for fs in [300]:\n",
     "\n",
     "                    experiment_name = 'num_res_layers-{}_num_filts-{}_drop_rate-{}_kernel_size-{}_fs-{}'.format(num_res_layers, \n",
     "                                                                                                                num_filts,\n",
