--- a/kardioml/models/deepecg/notebooks/5_hyper_parameter_tuning_test.ipynb
+++ b/kardioml/models/deepecg/notebooks/5_hyper_parameter_tuning_test.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,62 +56,22 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hyper-Parameter: num_res_layers-6_num_filts-128_drop_rate-0.3_kernel_size-3_fs-300\n",
-      "Workstation has 1 CPUs.\n",
-      "Workstation has 2 GPUs.\n",
-      "Initializing Model\n",
-      "input | shape = (?, 18000, 13)\n",
-      "stem_layer_1 | shape = (?, 9000, 64)\n",
-      "stem_layer_2 | shape = (?, 4500, 128)\n",
-      "res_layer_1_skip | shape = (?, 4500, 128)\n",
-      "res_layer_2_skip | shape = (?, 4500, 128)\n",
-      "res_layer_3_skip | shape = (?, 4500, 128)\n",
-      "res_layer_4_skip | shape = (?, 4500, 128)\n",
-      "res_layer_5_skip | shape = (?, 4500, 128)\n",
-      "res_layer_6_skip | shape = (?, 4500, 128)\n",
-      "output_skip_addition | shape = (?, 4500, 128)\n",
-      "output_conv1 | shape = (?, 4500, 256)\n",
-      "output_conv2 | shape = (?, 4500, 512)\n",
-      "gap | shape = (?, 512)\n",
-      "logits | shape = (?, 9)\n",
-      "input | shape = (?, 18000, 13)\n",
-      "stem_layer_1 | shape = (?, 9000, 64)\n",
-      "stem_layer_2 | shape = (?, 4500, 128)\n",
-      "res_layer_1_skip | shape = (?, 4500, 128)\n",
-      "res_layer_2_skip | shape = (?, 4500, 128)\n",
-      "res_layer_3_skip | shape = (?, 4500, 128)\n",
-      "res_layer_4_skip | shape = (?, 4500, 128)\n",
-      "res_layer_5_skip | shape = (?, 4500, 128)\n",
-      "res_layer_6_skip | shape = (?, 4500, 128)\n",
-      "output_skip_addition | shape = (?, 4500, 128)\n",
-      "output_conv1 | shape = (?, 4500, 256)\n",
-      "output_conv2 | shape = (?, 4500, 512)\n",
-      "gap | shape = (?, 512)\n",
-      "logits | shape = (?, 9)\n",
-      "Training Start\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set data path\n",
     "data_path = os.path.join(DATA_PATH, 'formatted')\n",
     "\n",
     "# Set model name\n",
-    "training_run = 'hpt_14'\n",
+    "training_run = 'hpt_15'\n",
     "\n",
     "# Set sample length (seconds)\n",
     "duration = 60\n",
     "\n",
     "# Loop through CV folds\n",
-    "for num_res_layers in [6, 7, 8, 9, 10]:\n",
-    "    for num_filts in [128, 256, 512]:\n",
-    "        for drop_rate in [0.3, 0.4, 0.5]:\n",
-    "            for kernel_size in [3, 5]:\n",
+    "for num_res_layers in [6, 7, 8, 9, 10, 11, 12]:\n",
+    "    for num_filts in [128, 256, 512, 1024]:\n",
+    "        for drop_rate in [0.3]:\n",
+    "            for kernel_size in [3]:\n",
     "                for fs in [300]:\n",
     "\n",
     "                    experiment_name = 'num_res_layers-{}_num_filts-{}_drop_rate-{}_kernel_size-{}_fs-{}'.format(num_res_layers, \n",
