- updated ETL code for new datasets.

--- a/notebooks/1_format_data.ipynb
+++ b/notebooks/1_format_data.ipynb
@@ -18,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
@@ -54,58 +45,134 @@
    "source": [
     "# Download and Format Dataset\n",
     "## Physionet 2020\n",
-    "### Tranche 1 (February 7, 2020)"
+    "### Dataset A\n",
+    "- A. 6,877 recordings from China Physiological Signal Challenge in 2018 (CPSC2018)\n",
+    "- https://storage.cloud.google.com/physionet-challenge-2020-12-lead-ecg-public/PhysioNetChallenge2020_Training_CPSC.tar.gz "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatting Physionet2020 dataset...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize data formater\n",
-    "data = FormatDataPhysionet2020(tranche=1)\n",
+    "data = FormatDataPhysionet2020(dataset='A')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False)"
+    "data.format(extract=True, debug=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tranche 2 (May 20, 2020)"
+    "### Dataset B\n",
+    "- B. 3,453 recordings from China 12-Lead ECG Challenge Database\n",
+    "- https://storage.cloud.google.com/physionet-challenge-2020-12-lead-ecg-public/PhysioNetChallenge2020_Training_2.tar.gz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatting Physionet2020 dataset...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize data formater\n",
-    "data = FormatDataPhysionet2020(tranche=2)\n",
+    "data = FormatDataPhysionet2020(dataset='B')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False)"
+    "data.format(extract=True, debug=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset C\n",
+    "- C. 74 recordings from the St Petersburg INCART 12-lead Arrhythmia Database\n",
+    "- https://storage.cloud.google.com/physionet-challenge-2020-12-lead-ecg-public/PhysioNetChallenge2020_Training_StPetersburg.tar.gz "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize data formater\n",
+    "data = FormatDataPhysionet2020(dataset='C')\n",
+    "\n",
+    "# Run format process\n",
+    "data.format(extract=True, debug=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset D\n",
+    "- D. 516 recordings from the PTB Diagnostic ECG Database\n",
+    "- https://storage.cloud.google.com/physionet-challenge-2020-12-lead-ecg-public/PhysioNetChallenge2020_Training_PTB.tar.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize data formater\n",
+    "data = FormatDataPhysionet2020(dataset='D')\n",
+    "\n",
+    "# Run format process\n",
+    "data.format(extract=True, debug=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset E\n",
+    "- E. 21,837 recordings from the PTB-XL electrocardiography Database\n",
+    "- https://storage.cloud.google.com/physionet-challenge-2020-12-lead-ecg-public/PhysioNetChallenge2020_PTB-XL.tar.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize data formater\n",
+    "data = FormatDataPhysionet2020(dataset='E')\n",
+    "\n",
+    "# Run format process\n",
+    "data.format(extract=True, debug=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset F\n",
+    "- F. 10,344 recordings from a Georgia 12-Lead ECG Challenge Database\n",
+    "- https://storage.cloud.google.com/physionet-challenge-2020-12-lead-ecg-public/PhysioNetChallenge2020_Training_E.tar.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize data formater\n",
+    "data = FormatDataPhysionet2020(dataset='F')\n",
+    "\n",
+    "# Run format process\n",
+    "data.format(extract=True, debug=False)"
    ]
   },
   {
@@ -135,6 +202,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
