--- a/notebooks/2_visualize_formatted_data.ipynb
+++ b/notebooks/2_visualize_formatted_data.ipynb
@@ -47,13 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "485a56ae0bd84642abdd4fefea9c8799",
+       "model_id": "4d4915067b804c46a8585cc4c4818c96",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,7 +67,7 @@
    ],
    "source": [
     "# Launch interactive plotter\n",
-    "waveform_plot_interact(dataset='physionet_2020_1')"
+    "waveform_plot_interact(dataset='A')"
    ]
   }
  ],
@@ -87,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
