--- a/kardioml/models/physionet2017/notebooks/1_extract_features.ipynb
+++ b/kardioml/models/physionet2017/notebooks/1_extract_features.ipynb
@@ -18,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
@@ -60,12 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Path\n",
+    "path = 'physionet_2020_1'\n",
+    "\n",
     "# Get meta data files\n",
-    "filenames = [file.split('.')[0] for file in os.listdir(os.path.join(DATA_PATH, 'formatted')) if 'json' in file]"
+    "filenames = [file.split('.')[0] for file in os.listdir(os.path.join(DATA_PATH, path, 'formatted')) \n",
+    "             if 'json' in file]"
    ]
   },
   {
@@ -77,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def process_lead(idx, filenames, lead):\n",
     "    \n",
     "    # Extract features\n",
-    "    features = Features(filename=filenames[idx])\n",
+    "    features = Features(filename=filenames[idx], path=path)\n",
     "    features.extract_features(lead=lead, feature_groups=['full_waveform_features', 'rri_features', 'template_features'], \n",
     "                              filter_bandwidth=FILTER_BAND_LIMITS)\n",
     "\n",
@@ -94,18 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing 6877 lead I signals.\n",
-      "Completed in 10.07 minutes.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Loop through leads\n",
     "for lead in ECG_LEADS[0:1]:\n",
@@ -135,10 +121,10 @@
     "for lead in ECG_LEADS[0:1]:\n",
     "\n",
     "    # Loop through filenames\n",
-    "    for filename in filenames[0:50]:\n",
+    "    for filename in filenames[0:200]:\n",
     "\n",
     "        # Extract features\n",
-    "        features = Features(filename=filename)\n",
+    "        features = Features(filename=filename, path=path)\n",
     "        features.extract_features(lead=lead, feature_groups=['full_waveform_features', 'rri_features', 'template_features'], \n",
     "                                  filter_bandwidth=[3, 45])\n",
     "        \n",
@@ -163,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
