--- a/notebooks/0_get_SNOMEDCT_codes.ipynb
+++ b/notebooks/0_get_SNOMEDCT_codes.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,7 @@
     "import sys\n",
     "import json\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from urllib.parse import quote\n",
     "from urllib.request import urlopen\n",
     "\n",
@@ -255,6 +256,112 @@
     "for key, value in labels.items():\n",
     "    print(key, value)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Format SNOMED-CT Codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dx</th>\n",
+       "      <th>SNOMED code</th>\n",
+       "      <th>Abbreviation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1st degree av block</td>\n",
+       "      <td>270492004</td>\n",
+       "      <td>IAVB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2nd degree av block</td>\n",
+       "      <td>195042002</td>\n",
+       "      <td>IIAVB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>abnormal QRS</td>\n",
+       "      <td>164951009</td>\n",
+       "      <td>abQRS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>accelerated idioventricular rhythm</td>\n",
+       "      <td>61277005</td>\n",
+       "      <td>AIVR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>accelerated junctional rhythm</td>\n",
+       "      <td>426664006</td>\n",
+       "      <td>AJR</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   dx  SNOMED code Abbreviation\n",
+       "0                 1st degree av block    270492004         IAVB\n",
+       "1                 2nd degree av block    195042002        IIAVB\n",
+       "2                        abnormal QRS    164951009        abQRS\n",
+       "3  accelerated idioventricular rhythm     61277005         AIVR\n",
+       "4       accelerated junctional rhythm    426664006          AJR"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import csv from competition organizers\n",
+    "mappings = pd.read_csv(os.path.join(DATA_PATH, 'labels.csv'))\n",
+    "\n",
+    "# View DataFrame\n",
+    "mappings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mappings_list = dict()\n",
+    "for index, row in mappings.iterrows():\n",
+    "    mappings_list[row['SNOMED code']] = {'label': row['Abbreviation'], 'label_full': row['dx']}"
+   ]
   }
  ],
  "metadata": {
@@ -273,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
