--- a/notebooks/2_visualize_formatted_data.ipynb
+++ b/notebooks/2_visualize_formatted_data.ipynb
@@ -18,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
@@ -56,18 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d380fff350e74d279d485b14abc9fd7d",
+       "model_id": "ade428590e994e70a9e3d1a4f8d0140a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=3438, description='filename_id', max=6876), Output()), _dom_classes=('wi…"
+       "interactive(children=(IntSlider(value=1726, description='filename_id', max=3452), Output()), _dom_classes=('wi…"
       ]
      },
      "metadata": {},
@@ -76,15 +67,8 @@
    ],
    "source": [
     "# Launch interactive plotter\n",
-    "waveform_plot_interact(dataset='A')"
+    "waveform_plot_interact(dataset='B')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
