- updated ETL code for new datasets.

--- a/notebooks/2_visualize_formatted_data.ipynb
+++ b/notebooks/2_visualize_formatted_data.ipynb
@@ -47,18 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ade428590e994e70a9e3d1a4f8d0140a",
+       "model_id": "2592eb04b3fe4332af041cf44d2405e6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=1726, description='filename_id', max=3452), Output()), _dom_classes=('wi…"
+       "interactive(children=(IntSlider(value=5171, description='filename_id', max=10343), Output()), _dom_classes=('w…"
       ]
      },
      "metadata": {},
@@ -67,7 +67,7 @@
    ],
    "source": [
     "# Launch interactive plotter\n",
-    "waveform_plot_interact(dataset='B')"
+    "waveform_plot_interact(dataset='F')"
    ]
   }
  ],
