- updated ETL code for new datasets.

--- a/notebooks/1_format_data.ipynb
+++ b/notebooks/1_format_data.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -174,31 +174,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatting Physionet2020 dataset...\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='F')\n",
-    "\n",
-    "# Run format process\n",
-    "data.format(extract=False, debug=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Zheng et al. (2019)\n",
-    "- https://figshare.com/collections/ChapmanECG/4560497/2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize data formater\n",
-    "data = FormatDataZheng2020()\n",
     "\n",
     "# Run format process\n",
     "data.format(extract=False, debug=False)"
