- updated ETL code for new datasets.

--- a/notebooks/3_explore_formatted_data.ipynb
+++ b/notebooks/3_explore_formatted_data.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "# Import local Libraries\n",
     "sys.path.insert(0, os.path.dirname(os.path.abspath(os.getcwd())))\n",
-    "from kardioml import DATA_PATH, FS, LABELS_LOOKUP\n",
+    "from kardioml import DATA_PATH\n",
     "\n",
     "# Configure Notebook\n",
     "import warnings\n",
@@ -214,8 +214,11 @@
     }
    ],
    "source": [
+    "# Set dataset\n",
+    "dataset = 'A'\n",
+    "\n",
     "# Get list of meta data files\n",
-    "filenames = [file.split('.')[0] for file in os.listdir(os.path.join(DATA_PATH, 'formatted')) if 'json' in file]\n",
+    "filenames = [file.split('.')[0] for file in os.listdir(os.path.join(DATA_PATH, dataset, 'formatted')) if 'json' in file]\n",
     "\n",
     "# List of meta data\n",
     "meta_data_list = list()\n",
@@ -224,7 +227,7 @@
     "for filename in filenames:\n",
     "    \n",
     "    # Import meta data\n",
-    "    data = json.load(open(os.path.join(DATA_PATH, 'formatted', '{}.json'.format(filename))))\n",
+    "    data = json.load(open(os.path.join(DATA_PATH, dataset, 'formatted', '{}.json'.format(filename))))\n",
     "    meta_data_list.append(data)\n",
     "    \n",
     "# Generate DataFrame\n",
@@ -506,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
