--- a/notebooks/2_visualize_formatted_data.ipynb
+++ b/notebooks/2_visualize_formatted_data.ipynb
@@ -47,18 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "565911cad7584684bdeb0c6f1a52183c",
+       "model_id": "af0f8cbe5ece4609b1334708e9133317",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=3438, description='filename_id', max=6876), Output()), _dom_classes=('wi…"
+       "interactive(children=(IntSlider(value=10918, description='filename_id', max=21836), Output()), _dom_classes=('…"
       ]
      },
      "metadata": {},
@@ -67,7 +67,7 @@
    ],
    "source": [
     "# Launch interactive plotter\n",
-    "waveform_plot_interact(dataset='A')"
+    "waveform_plot_interact(dataset='E')"
    ]
   },
   {
