added heuristics for proper p wave detection, seems like working on abnormals

--- a/notebooks/p_t_wave_detection.ipynb
+++ b/notebooks/p_t_wave_detection.ipynb
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/6877 [00:00<?, ?it/s]"
+      "  0%|          | 1/6877 [00:00<20:01,  5.72it/s]"
      ]
     },
     {
@@ -59,7 +59,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/6877 [00:00<?, ?it/s]\n"
+      "  0%|          | 5/6877 [00:01<27:29,  4.17it/s]\n"
      ]
     }
    ],
@@ -101,16 +101,45 @@
     "    rpeaks = meta['rpeaks'][0]\n",
     "    \n",
     "    \n",
-    "    twaves,pwaves = extract_waves.run(data[:,0],rpeaks)\n",
+    "    twaves,pwaves,data_p = extract_waves.run(data[:,0],rpeaks)\n",
     "    #data_p = extract_waves.run(data[:,0],rpeaks)\n",
     "    \n",
     "    j+=1\n",
-    "    if j ==1:\n",
+    "    if j ==6:\n",
     "        plt.plot(data[:,0])\n",
+    "        #plt.plot(data_p)\n",
     "        plt.plot(twaves[:,0],twaves[:,1],'o')\n",
     "        plt.plot(pwaves[:,0],pwaves[:,1],'o')\n",
+    "        plt.legend(['Raw data','T waves','P waves'])\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['atrial fibrillation']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meta['labels_full']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
