- updated ETL code for new datasets.

--- a/notebooks/1_format_data.ipynb
+++ b/notebooks/1_format_data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -61,37 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatting Physionet2020 dataset...\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Initialize data formater\n",
-    "data = FormatDataPhysionet2020(dataset='A')\n",
-    "\n",
-    "# Run format process\n",
-    "data.format(extract=False, debug=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Dataset B\n",
-    "- B. 3,453 recordings from China 12-Lead ECG Challenge Database\n",
-    "- https://storage.cloud.google.com/physionet-challenge-2020-12-lead-ecg-public/PhysioNetChallenge2020_Training_2.tar.gz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {
     "scrolled": false
    },
@@ -106,10 +76,34 @@
    ],
    "source": [
     "# Initialize data formater\n",
+    "data = FormatDataPhysionet2020(dataset='A')\n",
+    "\n",
+    "# Run format process\n",
+    "data.format(extract=False, debug=True, p_and_t_waves=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset B\n",
+    "- B. 3,453 recordings from China 12-Lead ECG Challenge Database\n",
+    "- https://storage.cloud.google.com/physionet-challenge-2020-12-lead-ecg-public/PhysioNetChallenge2020_Training_2.tar.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='B')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False)"
+    "data.format(extract=False, debug=False, p_and_t_waves=True)"
    ]
   },
   {
@@ -123,23 +117,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatting Physionet2020 dataset...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='C')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False)"
+    "data.format(extract=False, debug=False, p_and_t_waves=True)"
    ]
   },
   {
@@ -153,23 +139,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatting Physionet2020 dataset...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='D')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False)"
+    "data.format(extract=False, debug=False, p_and_t_waves=True)"
    ]
   },
   {
@@ -183,23 +161,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatting Physionet2020 dataset...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='E')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False)"
+    "data.format(extract=False, debug=False, p_and_t_waves=True)"
    ]
   },
   {
@@ -213,23 +183,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatting Physionet2020 dataset...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='F')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False)"
+    "data.format(extract=False, debug=False, p_and_t_waves=True)"
    ]
   }
  ],
