--- a/notebooks/1_format_data.ipynb
+++ b/notebooks/1_format_data.ipynb
@@ -18,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
@@ -61,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -79,7 +70,7 @@
     "data = FormatDataPhysionet2020(dataset='A')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=True, p_and_t_waves=True)"
+    "data.format(extract=False, debug=False, p_and_t_waves=True)"
    ]
   },
   {
