- fixed bug in ETL code.

--- a/notebooks/1_format_data.ipynb
+++ b/notebooks/1_format_data.ipynb
@@ -18,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
@@ -61,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -79,7 +70,7 @@
     "data = FormatDataPhysionet2020(dataset='A')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=True, p_and_t_waves=False)"
+    "data.format(extract=False, debug=False, p_and_t_waves=False)"
    ]
   },
   {
@@ -93,17 +84,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatting Physionet2020 dataset...\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='B')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=True, p_and_t_waves=True)"
+    "data.format(extract=False, debug=False, p_and_t_waves=False)"
    ]
   },
   {
@@ -125,7 +124,7 @@
     "data = FormatDataPhysionet2020(dataset='C')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=True)"
+    "data.format(extract=False, debug=False, p_and_t_waves=False)"
    ]
   },
   {
@@ -147,7 +146,7 @@
     "data = FormatDataPhysionet2020(dataset='D')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=True)"
+    "data.format(extract=False, debug=False, p_and_t_waves=False)"
    ]
   },
   {
@@ -169,7 +168,7 @@
     "data = FormatDataPhysionet2020(dataset='E')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=True)"
+    "data.format(extract=False, debug=False, p_and_t_waves=False)"
    ]
   },
   {
@@ -191,7 +190,7 @@
     "data = FormatDataPhysionet2020(dataset='F')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=True)"
+    "data.format(extract=False, debug=False, p_and_t_waves=False)"
    ]
   }
  ],
