--- a/notebooks/p_t_wave_detection.ipynb
+++ b/notebooks/p_t_wave_detection.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/HDD/ECG_physionet\n"
+     ]
+    }
+   ],
    "source": [
     "cd .."
    ]
@@ -24,7 +32,8 @@
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from p_t_wave_detection import PTWaveDetection"
+    "from p_t_wave_detection import PTWaveDetection\n",
+    "from resampling import Resampling"
    ]
   },
   {
@@ -45,7 +54,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/6877 [00:00<?, ?it/s]"
+      "  0%|          | 0/5913 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -59,12 +68,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 5/6877 [00:00<13:22,  8.56it/s]\n"
+      "\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "max() arg is an empty sequence",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-de91adce46f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[0;31m#data = resampling.upsample(data[:,0],2)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m     \u001b[0mtwaves\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpwaves\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_waves\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrpeaks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m     \u001b[0;31m#data_p = extract_waves.run(data[:,0],rpeaks)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/HDD/ECG_physionet/p_t_wave_detection.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, X, rpeaks)\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m             \u001b[0mPR\u001b[0m \u001b[0;34m/=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 64\u001b[0;31m             \u001b[0mRT\u001b[0m \u001b[0;34m/=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     65\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m             \u001b[0mT_wave\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpeakdet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: max() arg is an empty sequence"
      ]
     }
    ],
    "source": [
     "extract_waves = PTWaveDetection()\n",
+    "resampling = Resampling()\n",
     "\n",
     "DATA_PATH = './data/A/formatted/'\n",
     "\n",
@@ -100,8 +122,9 @@
     "    \n",
     "    rpeaks = meta['rpeaks'][0]\n",
     "    \n",
+    "    #data = resampling.upsample(data[:,0],2)\n",
     "    \n",
-    "    twaves,pwaves,data_p = extract_waves.run(data[:,0],rpeaks)\n",
+    "    twaves,pwaves = extract_waves.run(data[0,:],rpeaks)\n",
     "    #data_p = extract_waves.run(data[:,0],rpeaks)\n",
     "    \n",
     "    j+=1\n",
@@ -122,7 +145,7 @@
     {
      "data": {
       "text/plain": [
-       "['atrial fibrillation']"
+       "array([ 1, 12, 11, ...,  7, -2, -3], dtype=int16)"
       ]
      },
      "execution_count": 5,
@@ -131,7 +154,7 @@
     }
    ],
    "source": [
-    "meta['labels_full']"
+    "data[:,0]"
    ]
   },
   {
